# xai_demos

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
demos/proj1/: examples.json  gemini.py  gptminijb.py  try2.py
